--- a/style.css
+++ b/style.css
@@ -394,6 +394,13 @@ b{
 
 .carousel-content, .carousel-title{
     margin-top: 2.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.carousel-content{
+    height: 40vh;
 }
 
 .carousel-title{
@@ -590,7 +597,7 @@ footer{
         color: var(--secondary-color);
         text-decoration: none;
         font-size: 1.35rem;
-        font-weight: 500;
+        font-weight: 5  00;
     }
     
 
@@ -730,7 +737,6 @@ footer{
         font-size: 1.35rem;
         padding: 3rem;
         margin-left: 5rem;
-
     }
 
     .carousel-controls{
